<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#51C477">

                <android.support.v4.view.ViewPager
                    android:id="@+id/HomePager_content_ViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/HomePager_content_ViewPager_Dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="5dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/HomePager_content_Item_ViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/HomePager_content_Item_GroupDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="#E8E8E8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#FFFFFF">

                <RelativeLayout
                    android:id="@+id/HomePager_content_LXH"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#37A4F6"
                            android:textSize="18sp"
                            android:text="@string/LXH" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="10sp"
                            android:textColor="#989898"
                            android:text="@string/LXHinfo" />
                    </LinearLayout>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/laoxianghuiimage"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#E5E5E5" />

                <RelativeLayout
                    android:id="@+id/HomePager_content_WMH"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF9331"
                            android:textSize="18sp"
                            android:text="@string/WMH" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="10sp"
                            android:textColor="#989898"
                            android:text="@string/WMHinfo" />
                    </LinearLayout>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="7dp"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/waimaihuiimage"/>
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#E8E8E8"
                android:paddingLeft="15dp"
                android:text="@string/newinfo"
                android:textColor="#B0B0B0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5" />
            <com.lovehome.lovehome.util.MyListView
                android:id="@+id/HomePager_content_ListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>